[package]
name = "ruspiro-console"
authors = ["André Borrmann <pspwizard@gmx.de>"]
version = "0.3.0" # remember to update html_root_url
description = """
Lightweight console abstraction to print strings to an output channel that could be easely configured/attached.
"""
license = "Apache-2.0"
repository = "https://github.com/RusPiRo/ruspiro-console/tree/v0.3.0"
documentation = "https://docs.rs/ruspiro-console/0.3.0"
readme = "README.md"
keywords = ["RusPiRo", "console", "raspberrypi", "baremetal"]
categories = ["no-std", "embedded"]
edition = "2018"

[badges]
travis-ci = { repository = "RusPiRo/ruspiro-console", branch = "master" }
maintenance = { status = "actively-developed" }

[lib]

[dependencies]
ruspiro-singleton = { path = "../singleton", version = "0.3" }

[features]
