[package]
name = "ruspiro-console"
authors = ["André Borrmann <pspwizard@gmx.de>"]
version = "0.5.2" # remember to update html_root_url
description = """
Lightweight console abstraction for bare metal implementations to print strings to an output channel that could be easely configured/attached.
"""
license = "Apache-2.0"
repository = "https://github.com/RusPiRo/ruspiro-console/tree/v||VERSION||"
documentation = "https://docs.rs/ruspiro-console/||VERSION||"
readme = "README.md"
keywords = ["RusPiRo", "console", "raspberrypi", "baremetal"]
categories = ["no-std", "embedded"]
edition = "2018"

[badges]
travis-ci = { repository = "RusPiRo/ruspiro-console", branch = "master" }
maintenance = { status = "actively-developed" }

[lib]

[dependencies]
log = { version = "0.4", default-features = false }
ruspiro-singleton = "0.4.1"

[features]
ruspiro_pi3 = []

[patch.crates-io]
ruspiro-singleton = { git = "https://github.com/RusPiRo/ruspiro-singleton.git" }
